# hafez

./: .gitignore  LICENSE  Makefile  README.md  app.py  environment.yml  make.bat  pyproject.toml  requirements.txt  setup.py
data/: hafez.db  hafez.sql
data/db/: hafez.json  hafez.sql
examples/: example.py
hafez/: __init__.py  entry.py  main.py
hafez/data/: hafez.db  hafez.json  update.ipynb
hafez/utils/: db.py  formating.py
