[project]
name = "hafez"
version = "0.1.3"
authors = [
    { name = "Kaveh Bakhtiyari", email = "kbakhtiyari@yahoo.com" },
]
description = "Hafez Poems"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kavehbc/hafez"
"Bug Tracker" = "https://github.com/kavehbc/hafez"

