[project]
name = "hafez"
version = "0.2.7"
authors = [
    { name = "Kaveh Bakhtiyari", email = "kbakhtiyari@yahoo.com" },
]
description = "Hafez Poems"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/kavehbc/hafez"
"Bug Tracker" = "https://github.com/kavehbc/hafez"
